--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -4,6 +4,10 @@ body {
     font-family: Roboto Mono;
 }
 
+.ui.container {
+    max-width: 20%;
+}
+
 h1 {
     font-family: Roboto;
     margin: 60px auto;
@@ -18,6 +22,19 @@ h1 {
 #insert {
     margin: 20px auto;
     width: 50%;
+    text-align: center;
+}
+
+#insert input {
+    text-align: center;
+}
+
+#vec3 {
+    text-align: right;
+}
+
+#vec3 input{
+    text-align: right;
 }
 
 #tm input {
