--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -13,10 +13,10 @@ p {
     line-height: 1.5;
 }
 
-#slic {
+span.slic {
     font-family: Allura;
     font-size: 2.5em;
-    margin-right: 20px;
+    margin-right: 0.25em;
 }
 
 #insert {
@@ -118,6 +118,22 @@ img {
 .link:hover {
     text-decoration: none;
     color: #2471A3;
+}
+
+.ref {
+    text-decoration: underline;
+    color: #4A235A;
+    cursor: pointer;
+    transition: color ease-in-out 160ms;
+}
+
+.ref:hover {
+    text-decoration: none;
+    color: #7D3C98;
+}
+
+p.time {
+    padding-left: 3em;
 }
 
 #footer {
