--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -54,8 +54,9 @@ div.three.fields .field {
 }
 
 .green.button {
-    width: 60px;
-    height: 60px;
+    text-align: center;
+    width: 65px;
+    height: 50px;
 }
 
 .error.message {
