--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -53,7 +53,7 @@ div.three.fields .field {
     max-width: 100px;
 }
 
-.green.button {
+button.green.button {
     text-align: center;
     width: 65px;
     height: 50px;
