--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,5 +1,5 @@
 body {
-    background: #F8F9F9;
+    background: #F9F9F9;
     padding-top: 60px;
     font-family: Roboto Mono;
 }
@@ -57,6 +57,15 @@ i.wizard {
     padding-left: 10px;
 }
 
+.ui.blue.button {
+    background: #4484CE;
+    color: white;
+}
+
+.ui.button > .icon:not(.button) {
+    opacity: 0.9;
+}
+
 .error.message {
     width: 70%;
     margin: 20px auto;
@@ -78,8 +87,8 @@ i.wizard {
     margin-bottom: 30px;
     display: none;
     color: black;
-    border-color: blue;
-    box-shadow: 0 0 0 1px #2185D0 inset, 0 0 0 0 transparent;
+    border-color: #4484CE;
+    box-shadow: 0 0 0 1px #4484CE inset, 0 0 0 0 transparent;
     background-color: white;
 }
 
@@ -153,6 +162,3 @@ p.time {
     text-align: center;
     margin: 50px 0;
 }
-
-
-
